[workspace]
members = [
    "haversine_input",
    "haversine-compute",
    "json-parser",
    "instrument",
    "instrument/macros"
]
resolver = "2"

[workspace.dependencies]
assert_float_eq = "1.1.3"

[workspace.lints.clippy]
# Clippy lint groups
correctness = { level = "deny", priority = 0 }
suspicious = { level = "deny", priority = 0 }
complexity = { level = "deny", priority = 0 }
perf = { level = "deny", priority = 0 }
style = { level = "deny", priority = 0 }
pedantic = { level = "deny", priority = 0 }
cargo = { level = "deny", priority = 0 }

# Overrides
module_inception = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }
unused_async = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
enum_glob_use = { level = "allow", priority = 1 }
doc_markdown = { level = "allow", priority = 1 }
too_many_lines = { level = "deny", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 1 }
struct_excessive_bools = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
should_panic_without_expect = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
debug = false
strip = true
