[package]
name = "haversine-compute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0.188", features = ["derive"] }

[[bin]]
name = "compute"
path = "src/main.rs"

[lib]
name = "haversine_compute"
path = "src/lib.rs"

[dependencies.json-parser]
path = "../json-parser"


[dependencies.instrument]
path = "../instrument"

[dependencies.instrument_macros]
path = "../instrument/macros"