[package]
name = "haversine_input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = { version = "1.0.107" }

[dependencies.haversine-compute]
path = "../haversine-compute"

[lints]
workspace = true
