[package]
name = "instrument"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
libc = "0.2.150"
mach2 = "0.4.1"
memmap = "0.7.0"
once_cell = "1.19.0"

[[bin]]
name = "instrument"

[[bin]]
name = "page_fault_probe"
path = "src/page_fault_probe.rs"

[[bin]]
name = "write_to_all_bytes"
path = "src/write_to_all_bytes.rs"

[lib]
name = "instrument"

[lints]
workspace = true
