[package]
name = "json-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.instrument]
path = "../instrument"

[dependencies.instrument_macros]
path = "../instrument/macros"

[lints]
workspace = true
