[package]
name = "instrument_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "instrument_macros"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.33"
proc-macro2 = "1.0.67"
proc-macro-error = "1.0.4"
darling = "0.20.3"
